0fabf235-0dc1-4538-aaec-698693462642

--- a/component/calendar/calendar.wxml
+++ b/component/calendar/calendar.wxml
@@ -20,12 +20,14 @@
       </view>
     </view>
   </view>
+  
   <!-- 日历头部 -->
   <view class="flex-around calendar-week">
     <view class="calendar-week-item" wx:for="{{calendarHeadDate}}" wx:key="item">
       {{calendarHeadDate[(index-firstDayOfWeek+7)%7]}}
     </view>
   </view>
+  
   <!-- 日历主体 -->
   <swiper class="swiper" style="height:{{swiperHeight}}rpx" bindchange="swiperChange" circular="{{true}}" current="{{swiperCurrent}}" duration="{{swiperDuration}}">
     <swiper-item wx:for="{{[dateList0, dateList1, dateList2]}}" wx:for-index="listIndex" wx:for-item="listItem" wx:key="listIndex">
@@ -33,11 +35,18 @@
         <view wx:for="{{listItem}}" wx:key="dateList" class="day">
           <view class="bg {{calculate.spot(item,selectDay,spotMap)}} {{calculate.hasNow(item,nowDay)}} {{calculate.hasNowMonth(item,selectDay)}} {{calculate.hasSelect(item,selectDay,oldCurrent,listIndex)}} {{calculate.hasDisable(item,disabledDateList)}}" catchtap="selectChange" data-day="{{item.day}}" data-year="{{item.year}}" data-month="{{item.month}}">
             {{item.day}}
+            <!-- 天气信息显示 -->
+            <block wx:if="{{weatherMap}}">
+              <view class="weather-icon">
+                {{weatherMap['y' + item.year + 'm' + item.month + 'd' + item.day]?.weather}}
+              </view>
+            </block>
           </view>
         </view>
       </view>
     </swiper-item>
   </swiper>
+  
   <!-- 展开收缩 -->
   <view wx:if="{{showShrink}}" catchtap="openChange" class="flex list-open">
     <view class="icon {{open?'fold':'unfold'}}"></view>
