--- a/index/index.wxss
+++ b/index/index.wxss
@@ -1,4 +1,128 @@
+/* 天气信息样式 */
+.weather-wrap {
+  margin: 20rpx;
+  padding: 20rpx;
+  background-color: #f5f5f5;
+  border-radius: 10rpx;
+}
+
+.today-weather {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30rpx;
+}
+
+.weather-main {
+  text-align: center;
+}
+
+.temperature {
+  font-size: 60rpx;
+  font-weight: bold;
+  color: #333;
+}
+
+.weather {
+  font-size: 28rpx;
+  color: #666;
+  margin-top: 10rpx;
+}
+
+.weather-details {
+  display: flex;
+  flex-direction: column;
+  gap: 15rpx;
+}
+
+.detail-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.detail-item .label {
+  font-size: 24rpx;
+  color: #999;
+}
+
+.detail-item .value {
+  font-size: 26rpx;
+  color: #333;
+}
+
+/* 天气预报样式 */
+.weather-forecast {
+  margin-bottom: 30rpx;
+}
+
+.forecast-title {
+  font-size: 32rpx;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 20rpx;
+}
+
+.forecast-list {
+  display: flex;
+  gap: 30rpx;
+  white-space: nowrap;
+}
+
+.forecast-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 120rpx;
+  padding: 15rpx;
+  background-color: #fff;
+  border-radius: 10rpx;
+}
+
+.forecast-item .date {
+  font-size: 24rpx;
+  color: #666;
+  margin-bottom: 10rpx;
+}
+
+.forecast-item .weather-icon {
+  font-size: 36rpx;
+  margin-bottom: 10rpx;
+}
+
+.forecast-item .weather {
+  font-size: 24rpx;
+  color: #333;
+  margin-bottom: 10rpx;
+}
+
+.forecast-item .temp-range {
+  font-size: 22rpx;
+  color: #666;
+}
+
+/* 天气建议样式 */
+.weather-suggestions {
+  background-color: #fff;
+  padding: 20rpx;
+  border-radius: 10rpx;
+}
+
+.suggestions-title {
+  font-size: 32rpx;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 15rpx;
+}
+
+.suggestion-content {
+  font-size: 26rpx;
+  color: #666;
+  line-height: 1.6;
+}
+
+/* 原有的样式 */
 .operation-wrap {
-  margin: 30px;
+  margin: 20rpx;
   text-align: center;
 }
